Add test case to check listing is in descending order. Clean up test code.