@@ -30,7 +30,6 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Lists;
 import io.airbyte.api.model.AttemptInfoRead;
 import io.airbyte.api.model.AttemptRead;
 import io.airbyte.api.model.JobConfigType;
@@ -44,6 +43,7 @@ import io.airbyte.api.model.LogRead;
 import io.airbyte.commons.enums.Enums;
 import io.airbyte.config.JobCheckConnectionConfig;
 import io.airbyte.config.JobConfig;
+import io.airbyte.config.JobConfig.ConfigType;
 import io.airbyte.scheduler.Attempt;
 import io.airbyte.scheduler.AttemptStatus;
 import io.airbyte.scheduler.Job;
@@ -54,6 +54,7 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -67,39 +68,17 @@ public class JobHistoryHandlerTest {
   private static final long ATTEMPT_ID = 1002L;
   private static final String JOB_CONFIG_ID = "123";
   private static final JobStatus JOB_STATUS = JobStatus.SUCCEEDED;
-  private static final AttemptStatus ATTEMPT_STATUS = AttemptStatus.SUCCEEDED;
   private static final JobConfig.ConfigType CONFIG_TYPE = JobConfig.ConfigType.CHECK_CONNECTION_SOURCE;
   private static final JobConfigType CONFIG_TYPE_FOR_API = JobConfigType.CHECK_CONNECTION_SOURCE;
   private static final JobConfig JOB_CONFIG = new JobConfig()
       .withConfigType(CONFIG_TYPE)
       .withCheckConnection(new JobCheckConnectionConfig());
   private static final Path LOG_PATH = Path.of("log_path");
+  private static final LogRead EMPTY_LOG_READ = new LogRead().logLines(new ArrayList<>());
   private static final long CREATED_AT = System.currentTimeMillis() / 1000;
 
-  private Job job;
-
-  private static final JobInfoRead JOB_INFO =
-      new JobInfoRead()
-          .job(new JobRead()
-              .id(JOB_ID)
-              .configId(JOB_CONFIG_ID)
-              .status(io.airbyte.api.model.JobStatus.SUCCEEDED)
-              .configType(JobConfigType.CHECK_CONNECTION_SOURCE)
-              .createdAt(CREATED_AT)
-              .updatedAt(CREATED_AT))
-          .attempts(Lists.newArrayList(new AttemptInfoRead()
-              .attempt(new AttemptRead()
-                  .id(ATTEMPT_ID)
-                  .status(io.airbyte.api.model.AttemptStatus.SUCCEEDED)
-                  .updatedAt(CREATED_AT)
-                  .createdAt(CREATED_AT)
-                  .endedAt(CREATED_AT))
-              .logs(new LogRead().logLines(new ArrayList<>()))));
-
-  private static final JobWithAttemptsRead JOB_WITH_ATTEMPTS_READ = new JobWithAttemptsRead()
-      .job(JOB_INFO.getJob())
-      .attempts(JOB_INFO.getAttempts().stream().map(AttemptInfoRead::getAttempt).collect(Collectors.toList()));
-
+  private Job testJob;
+  private Attempt testJobAttempt;
   private JobPersistence jobPersistence;
   private JobHistoryHandler jobHistoryHandler;
 
@@ -113,10 +92,31 @@ public class JobHistoryHandlerTest {
 
   }
 
+  private static List<AttemptInfoRead> toAttemptInfoList(List<Attempt> attempts) {
+    final List<AttemptRead> attemptReads = attempts.stream().map(JobHistoryHandlerTest::toAttemptRead).collect(Collectors.toList());
+
+    final Function<AttemptRead, AttemptInfoRead> toAttemptInfoRead = (AttemptRead a) -> new AttemptInfoRead().attempt(a).logs(EMPTY_LOG_READ);
+    return attemptReads.stream().map(toAttemptInfoRead).collect(Collectors.toList());
+  }
+
+  private static AttemptRead toAttemptRead(Attempt a) {
+    return new AttemptRead()
+        .id(a.getId())
+        .status(Enums.convertTo(a.getStatus(), io.airbyte.api.model.AttemptStatus.class))
+        .createdAt(a.getCreatedAtInSecond())
+        .updatedAt(a.getUpdatedAtInSecond())
+        .endedAt(a.getEndedAtInSecond().orElse(null));
+  }
+
+  private static Attempt createSuccessfulAttempt(long jobId, long timestamps) {
+    return new Attempt(ATTEMPT_ID, jobId, LOG_PATH, null, AttemptStatus.SUCCEEDED, timestamps, timestamps, timestamps);
+  }
+
   @BeforeEach
   public void setUp() {
-    Attempt attempt = new Attempt(ATTEMPT_ID, JOB_ID, LOG_PATH, null, ATTEMPT_STATUS, CREATED_AT, CREATED_AT, CREATED_AT);
-    job = new Job(JOB_ID, JOB_CONFIG.getConfigType(), JOB_CONFIG_ID, JOB_CONFIG, ImmutableList.of(attempt), JOB_STATUS, null, CREATED_AT, CREATED_AT);
+    testJobAttempt = createSuccessfulAttempt(JOB_ID, CREATED_AT);
+    testJob = new Job(JOB_ID, JOB_CONFIG.getConfigType(), JOB_CONFIG_ID, JOB_CONFIG, ImmutableList.of(testJobAttempt), JOB_STATUS, null, CREATED_AT,
+        CREATED_AT);
 
     jobPersistence = mock(JobPersistence.class);
     jobHistoryHandler = new JobHistoryHandler(jobPersistence);
@@ -129,38 +129,60 @@ public class JobHistoryHandlerTest {
     @Test
     @DisplayName("Should return jobs with/without attempts in descending order")
     public void testListJobs() throws IOException {
-      final var successfulJob = job;
+      final var successfulJob = testJob;
 
-      final var createdAt2 = CREATED_AT + 1000;
       final var jobId2 = JOB_ID + 100;
-      final var jobWithNoAttempt = new Job(jobId2, JOB_CONFIG.getConfigType(), JOB_CONFIG_ID, JOB_CONFIG, Collections.emptyList(), JobStatus.PENDING,
-          null, createdAt2, createdAt2);
+      final var createdAt2 = CREATED_AT + 1000;
+      final var latestJobNoAttempt =
+          new Job(jobId2, JOB_CONFIG.getConfigType(), JOB_CONFIG_ID, JOB_CONFIG, Collections.emptyList(), JobStatus.PENDING,
+              null, createdAt2, createdAt2);
 
-      when(jobPersistence.listJobs(CONFIG_TYPE, JOB_CONFIG_ID)).thenReturn(List.of(successfulJob));
+      when(jobPersistence.listJobs(CONFIG_TYPE, JOB_CONFIG_ID)).thenReturn(List.of(latestJobNoAttempt, successfulJob));
 
       final var requestBody = new JobListRequestBody()
           .configTypes(Collections.singletonList(CONFIG_TYPE_FOR_API))
           .configId(JOB_CONFIG_ID);
       final var jobReadList = jobHistoryHandler.listJobsFor(requestBody);
 
-      // final var noAttemptJobRead = new JobRead().
-      // new JobWithAttemptsRead().job(JOB_INFO.getJob())
-      // .attempts(JOB_INFO.getAttempts().stream().map(AttemptInfoRead::getAttempt).collect(Collectors.toList()));
-      final JobReadList expectedJobReadList = new JobReadList().jobs(List.of(JOB_WITH_ATTEMPTS_READ));
+      final var successfulJobWithAttemptRead = new JobWithAttemptsRead().job(toJobInfo(successfulJob)).attempts(ImmutableList.of(toAttemptRead(
+          testJobAttempt)));
+      final var latestJobWithAttemptRead = new JobWithAttemptsRead().job(toJobInfo(latestJobNoAttempt)).attempts(Collections.emptyList());
+      final JobReadList expectedJobReadList = new JobReadList().jobs(List.of(latestJobWithAttemptRead, successfulJobWithAttemptRead));
+
       assertEquals(expectedJobReadList, jobReadList);
     }
 
     @Test
     @DisplayName("Should return jobs in descending order regardless of type")
     public void testListJobsFor() throws IOException {
-      when(jobPersistence.listJobs(CONFIG_TYPE, JOB_CONFIG_ID)).thenReturn(Collections.singletonList(job));
+      final var firstJob = testJob;
+
+      final var secondJobId = JOB_ID + 100;
+      final var createdAt2 = CREATED_AT + 1000;
+      final var secondJobAttempt = createSuccessfulAttempt(secondJobId, createdAt2);
+      final var secondJob = new Job(secondJobId, ConfigType.DISCOVER_SCHEMA, JOB_CONFIG_ID, JOB_CONFIG, ImmutableList.of(secondJobAttempt),
+          JobStatus.SUCCEEDED, null, createdAt2, createdAt2);
+
+      final var latestJobId = secondJobId + 100;
+      final var createdAt3 = createdAt2 + 1000;
+      final var latestJob =
+          new Job(latestJobId, ConfigType.SYNC, JOB_CONFIG_ID, JOB_CONFIG, Collections.emptyList(), JobStatus.PENDING, null, createdAt3, createdAt3);
+
+      when(jobPersistence.listJobs(CONFIG_TYPE, JOB_CONFIG_ID)).thenReturn(List.of(latestJob, secondJob, firstJob));
 
       final JobListRequestBody requestBody = new JobListRequestBody()
-          .configTypes(Collections.singletonList(CONFIG_TYPE_FOR_API))
+          .configTypes(List.of(CONFIG_TYPE_FOR_API, JobConfigType.SYNC, JobConfigType.DISCOVER_SCHEMA))
           .configId(JOB_CONFIG_ID);
       final JobReadList jobReadList = jobHistoryHandler.listJobsFor(requestBody);
 
-      final JobReadList expectedJobReadList = new JobReadList().jobs(Collections.singletonList(JOB_WITH_ATTEMPTS_READ));
+      final var firstJobWithAttemptRead =
+          new JobWithAttemptsRead().job(toJobInfo(firstJob)).attempts(ImmutableList.of(toAttemptRead(testJobAttempt)));
+      final var secondJobWithAttemptRead =
+          new JobWithAttemptsRead().job(toJobInfo(secondJob)).attempts(ImmutableList.of(toAttemptRead(secondJobAttempt)));
+      final var latestJobWithAttemptRead = new JobWithAttemptsRead().job(toJobInfo(latestJob)).attempts(Collections.emptyList());
+      final JobReadList expectedJobReadList =
+          new JobReadList().jobs(List.of(latestJobWithAttemptRead, secondJobWithAttemptRead, firstJobWithAttemptRead));
+
       assertEquals(expectedJobReadList, jobReadList);
     }
 
@@ -169,12 +191,14 @@ public class JobHistoryHandlerTest {
   @Test
   @DisplayName("Should return the right job info")
   public void testGetJobInfo() throws IOException {
-    when(jobPersistence.getJob(JOB_ID)).thenReturn(job);
+    when(jobPersistence.getJob(JOB_ID)).thenReturn(testJob);
 
     final JobIdRequestBody requestBody = new JobIdRequestBody().id(JOB_ID);
     final JobInfoRead jobInfoActual = jobHistoryHandler.getJobInfo(requestBody);
 
-    assertEquals(JOB_INFO, jobInfoActual);
+    final JobInfoRead exp = new JobInfoRead().job(toJobInfo(testJob)).attempts(toAttemptInfoList(ImmutableList.of(testJobAttempt)));
+
+    assertEquals(exp, jobInfoActual);
   }
 
   @Test
